@@ -11,6 +11,10 @@ Package author: Andrei Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-03-02
+2012-04-23 Andy Salnikov
+- two new calibraion data classes: CsPad2x2PixelGain and CsPadPixelGain
+
 Tag: V00-03-01
 2012-02-08 Andy Salnikov
 - small fix to comments
